Snippet layout environment basically working.  Max-width not working properly.

--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,13 +1,13 @@
-<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->
+{#<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->#}
 <container class="devborder container-fluid" {{ float_dir }}>
     <div class="row">
         <div class="col">
             <div class="devBorder2" style="max-width: {{ slideshow.width }}px;
                     {% if slideshow.height %}
-                        min-height: {{ slideshow.height }}px;
+                        max-height: {{ slideshow.height }}px;
                     {% endif %}
                     {% if slideshow.background %}
-                        background-color: slideshow.background;
+                        background-color: {{ slideshow.background }};
                     {% endif %}">
                 {% if slideshow.title and slideshow.title != 'NO NAME' %}
                     <figcaption class="{{ slideshow.title_class }}">{{ slideshow.title }}</figcaption>
