Added \blank_lines command

--- a/ssfl/static/gen/packed.css
+++ b/ssfl/static/gen/packed.css
@@ -735,6 +735,21 @@ table.fc-header{
 
 
 
+/* Styles for use in signs */
+.sst_border_quote {
+  border: saddlebrown solid 10px;
+  border-style: ridge;
+  border-radius: 5px; }
+
+.author {
+  font-weight: bold;
+  font-size: small; }
+
+.sst_sign_text {
+  font-size: large;
+  font-weight: bolder;
+  font-style: oblique; }
+
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
 @keyframes spinAround {
