--- a/ssfl/templates/admin/display_admin_report.jinja2
+++ b/ssfl/templates/admin/display_admin_report.jinja2
@@ -10,9 +10,9 @@
 
 {% block content %}
     <section class="container">
-        <div class="XXX">
+        <div class="columns">
             {% if function == 'ar_display' %}
-                <h3 class="h3">Recent Reports in "{{ search_field }}" Searched with "{{ search_string }}"</h3>
+                <h3 class="h3 text-center">Recent Reports in "{{ search_field }}" Searched with "{{ search_string }}"</h3>
             {% endif %}
             {% if function == 'ar_display'  %}
                 <table class="table table-bordered table-sm">
