--- a/ssfl/templates/admin/edit.jinja2
+++ b/ssfl/templates/admin/edit.jinja2
@@ -10,6 +10,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
+        <h3 class="h3 text-center">Edit Pages (Stories) from Database</h3>
             <form action="{{ url_for('admin_bp.sst_admin_edit') }}" method="post"
                   enctype="multipart/form-data">
                 {% with %}
