--- a/ssfl/templates/admin/json_edit.jinja2
+++ b/ssfl/templates/admin/json_edit.jinja2
@@ -10,6 +10,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
+         <h3 class="h3 text-center">Manage Templates in TOML or JSON Format</h3>
             <form action="{{ url_for('admin_bp.up_down_load_json_template') }}" method="post">
 
                 {#  work_function         #}
