--- a/ssfl/templates/admin/json_make_template.jinja2
+++ b/ssfl/templates/admin/json_make_template.jinja2
@@ -16,6 +16,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
+        <h3 class="h3 text-center">Manage Templates in TOML or JSON Format</h3>
             <form action="{{ url_for('admin_bp.make_story_json_template') }}" method="post"
                   enctype="multipart/form-data">
 
