--- a/ssfl/templates/admin/manage_admin_reports.jinja2
+++ b/ssfl/templates/admin/manage_admin_reports.jinja2
@@ -10,7 +10,7 @@
 {% block content %}
     <section class="container">
         <div class="XXX">
-            <h3>Admin Reporting</h3>
+            <h3 class="h3 text-center">Admin Reporting</h3>
             <form action="{{ url_for('admin_bp.make_admin_report') }}" method="post">
 
                 {#  Work Function          #}
