--- a/ssfl/templates/admin/manage_photos.jinja2
+++ b/ssfl/templates/admin/manage_photos.jinja2
@@ -10,6 +10,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
+        <h3 class="h3 text-center">Manage Photos</h3>
             <form action="{{ url_for('admin_bp.manage_photos') }}" method="post">
 
                 {#  Work Function          #}
