--- a/ssfl/templates/admin/miscellaneous_functions.jinja2
+++ b/ssfl/templates/admin/miscellaneous_functions.jinja2
@@ -9,8 +9,8 @@
 
 {% block content %}
     <section class="container">
-        <div class="XXX">
-            <h3>Miscellaneous Admin Functions</h3>
+        <div class="columns">
+            <h3 class="h3 text-center">Miscellaneous Admin Functions</h3>
             <p>Only required parameters for an action are required.</p>
             <form action="{{ url_for('admin_bp.sst_miscellaneous') }}" method="post">
 
