--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -1,5 +1,5 @@
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 navbar-fixed-top" role="navigation" aria-label="main navigation"
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 navbar-fixed-top" role="navigation"
+     aria-label="main navigation"
      style="position: sticky">
     <div class="container">
         <div class="navbar-brand mr-3">
@@ -77,25 +77,9 @@
                         <a class="navbar-item" href="{{ url_for('admin_bp.make_admin_report') }}">
                             Report an Issue
                         </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
-                            Manage Calendar
-                        </a>
-
-                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_miscellaneous') }}">
-                            Miscellaneous Functions
-                        </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_index_page') }}">
-                            Manage Index Page
-                        </a>
-                        <a class="navbar-item"
-                           href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
-                            Maps
-                        </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
-                            Edit DB Page
-                        </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.make_story_json_template') }}">
-                            Manage JSON templates
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_page_data') }}">
+                            Review Recent Pages
                         </a>
                         <a class="navbar-item" href="{{ url_for('admin_bp.sst_import_page') }}">
                             Import MS Word Page
@@ -107,12 +91,26 @@
                             Manage Existing Photos
                         </a>
                         <hr class="navbar-divider">
-                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_import_database') }}">
-                            Manage Import from Wordpress Database
+
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
+                            Manage Calendar
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.make_story_json_template') }}">
+                            Manage Templates (in TOML or JSON format)
                         </a>
                         <hr class="navbar-divider">
-                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_page_data') }}">
-                            Review Recent Pages
+                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_index_page') }}">
+                            Manage Index Page
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
+                            Edit DB Page
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_import_database') }}">
+                            Manage Import from Existing SsT Wordpress Database
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_miscellaneous') }}">
+                            Miscellaneous Functions
                         </a>
                     </div>
                 </div>
