Add capability to create slide display to go in upper left corner of page.  Need to generalize to any snippet type.

--- a/ssfl/templates/base/layout2.jinja2
+++ b/ssfl/templates/base/layout2.jinja2
@@ -29,12 +29,12 @@
 </head>
 <body>
 
-<div class="main container-fluid text-dark">
+<div class="container-fluid text-dark">
     <div class="row">
-        <div class="col-6">
-        {% include 'main/main_slides.jinja2' %}
+        <div class="col-4">
+            {% include 'main/main_slides.jinja2' %}
         </div>
-        <div class="col-6">
+        <div class="col-8">
             {% include 'base/nav2.jinja2' %}
         </div>
     </div>
