--- a/ssfl/templates/base/nav2.jinja2
+++ b/ssfl/templates/base/nav2.jinja2
@@ -2,67 +2,73 @@
      aria-label="main navigation"
      style="position: sticky">
     <div class="container">
-        <div class="navbar-brand mr-3">
-            <a class="navbar-item" href="https://sunnyside.cc">
-                <img src="{{ url_for('static', filename='images/NoEvil.jpg') }}" width="50px" height="50px">
-            </a>
-        </div>
-
-        <div id="navbarUpper" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main') }}">
-                    Home
-                </a>
-
-                <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main_calendar') }}">
-                    News
-                </a>
-
-                <a class="navbar-item has-text-white"
-                   href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
-                    Maps
-                </a>
-
-                <a class="navbar-item has-text-white"
-                   href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
-                    Weather
-                </a>
+        <div class="row">
+            <div class="col-3">
+                <div class="navbar-brand">
+                    <a class="navbar-item" href="https://sunnyside.cc">
+                        <img src="{{ url_for('static', filename='images/NoEvil.jpg') }}" width="100px" height="100px">
+                    </a>
+                </div>
             </div>
-        </div>
-        <div id="navbarLower" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main') }}">
-                    Calendar
-                </a>
+            <div class="col-9">
 
-                <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main_calendar') }}">
-                    Join the Fun
-                </a>
+                <div id="navbarUpper" class="navbar-menu">
+                    <div class="navbar-start text-right">
+                        <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main') }}">
+                            Home
+                        </a>
 
-                <a class="navbar-item has-text-white"
-                   href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
-                    Reading Nook
-                </a>
+                        <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main_calendar') }}">
+                            News
+                        </a>
 
-                <a class="navbar-item has-text-white"
-                   href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
-                    Campus Departments
-                </a>
+                        <a class="navbar-item has-text-white"
+                           href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
+                            Maps
+                        </a>
+
+                        <a class="navbar-item has-text-white"
+                           href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
+                            Weather
+                        </a>
+                    </div>
+                </div>
+                <div id="navbarLower" class="navbar-menu">
+                    <div class="navbar-start">
+                        <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main') }}">
+                            Calendar
+                        </a>
+
+                        <a class="navbar-item has-text-white" href="{{ url_for('main.sst_main_calendar') }}">
+                            Join the Fun
+                        </a>
+
+                        <a class="navbar-item has-text-white"
+                           href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
+                            Reading Nook
+                        </a>
+
+                        <a class="navbar-item has-text-white"
+                           href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
+                            Campus Departments
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 
-{#    <div class="navbar-end">#}
-{#        <div class="navbar-item">#}
-{#            <div class="buttons">#}
-                {# <a class="button is-primary">#}
-                {# <strong>Sign up</strong>#}
-                {# </a>#}
-                {# <a class="button is-light">#}
-                {# Log in#}
-                {# </a>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+    {#    <div class="navbar-end">#}
+    {#        <div class="navbar-item">#}
+    {#            <div class="buttons">#}
+    {# <a class="button is-primary">#}
+    {# <strong>Sign up</strong>#}
+    {# </a>#}
+    {# <a class="button is-light">#}
+    {# Log in#}
+    {# </a>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
 </nav>
