--- a/ssfl/templates/main/main_slides.jinja2
+++ b/ssfl/templates/main/main_slides.jinja2
@@ -1,7 +1,9 @@
 {#<div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">#}
 <div>
-    {% with %}
-        {% set slideshow = main_slides.slides %}
-        {% include 'base/slideshow.jinja2' %}
-    {% endwith %}
+    {% if main_slides.slides %}
+        {% with %}
+            {% set slideshow = main_slides.slides %}
+            <div style="min-height: 150px; background-color: yellow">{% include 'base/slideshow.jinja2' %}</div>
+        {% endwith %}
+    {% endif %}
 </div>
