--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -9,7 +9,7 @@
     {% assets "css_bundle" %}
         <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>
     {% endassets %}
-<link rel="stylesheet" type="text/css" href="/static/css/mystyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/mystyles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
@@ -19,18 +19,23 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-{% assets "js_bundle" %}
+    {% assets "js_bundle" %}
         <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
-{# <script type="text/javascript" src="/static/gen/packed.js"></script>#}
+    {# <script type="text/javascript" src="/static/gen/packed.js"></script>#}
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.0/dropzone.min.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    {% if add_data_table %}
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+        <script type="text/javascript" charset="utf8"
+                src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+    {% endif %}
 </head>
 <body>
 
 <div class="main container-fluid text-dark">
-{% include 'base/nav.jinja2' %}
+    {% include 'base/nav.jinja2' %}
     {% set flash_message_type = 'error' %}
     {% include 'base/flashed_messages.jinja2' %}
     {% block content %}{% endblock %}
