Fixed css container handling, other bugs

--- a/ssfl/static/css/mystyles.css
+++ b/ssfl/static/css/mystyles.css
@@ -12,3 +12,8 @@
   font-size: large;
   font-weight: bolder;
   font-style: oblique; }
+
+/* increase paragraph separation */
+p {
+  margin-bottom: 1.5rem;
+}
