--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 navbar-fixed-top" role="navigation"
      aria-label="main navigation"
-     style="position: sticky">
+     style="position: sticky; margin-top:20px">
     <div class="container">
         <div class="navbar-brand mr-3">
             <a class="navbar-item" href="https://sunnyside.cc">
