--- a/ssfl/templates/base/snippet.jinja2
+++ b/ssfl/templates/base/snippet.jinja2
@@ -10,7 +10,7 @@
 <div class="card" style="">
         {% if item.cell_type=='story' %}
             {% set item2 = item.story %}
-            <div class="col">
+            <div class="BASE_snippet col">
                 {% include 'main/snippet_story.jinja2' %}
             </div>
         {% endif %}
