--- a/ssfl/templates/main/snippet_slideshow.jinja2
+++ b/ssfl/templates/main/snippet_slideshow.jinja2
@@ -2,7 +2,7 @@
     <div class="title text-wrap">{{ story.title | safe }}</div>
 {% endif %}
 {#<div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">#}
-<div>
+<div class="SNIPPET_slideshow">
     {% with %}
         {% set slideshow = story.slides %}
         {% include 'base/slideshow.jinja2' %}
