--- a/ssfl/templates/main/specific_page.jinja2
+++ b/ssfl/templates/main/specific_page.jinja2
@@ -10,7 +10,7 @@
 {% block content %}
 <section class="container">
     <div class="columns">
-        <div class="">
+        <div ct="specific_page" class="">
 {#            <div class="title">{{ story['title'] | safe }}</div>#}
             <div class="message-body">{{ story['body'] | safe }}</div>
         </div>
