--- a/ssfl/static/gen/packed.css
+++ b/ssfl/static/gen/packed.css
@@ -750,6 +750,11 @@ table.fc-header{
   font-weight: bolder;
   font-style: oblique; }
 
+/* increase paragraph separation */
+p {
+  margin-bottom: 1.5rem;
+}
+
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
 @keyframes spinAround {
