--- a/ssfl/templates/base/picture.jinja2
+++ b/ssfl/templates/base/picture.jinja2
@@ -1,13 +1,13 @@
 {% if photo.exists %}
-    <div class="{{ photo.css_class }} float-{{ photo.alignment }} px-3 {{ do_rotation }}" style="max-width: {{ photo.width }}px;">
-    <figure class="figure">
+    <div class="PICTURE {{ photo.css_class }} float-{{ photo.alignment }} px-3 {{ do_rotation }}"
+         style="max-width: {{ photo.width }}px; max-height: {{ photo.height }}px;">
+    <figure class="figure" >
         {%  if photo.title %}
             <figcaption class="figure-caption has-text-black {{ photo.title_class }}">{{ photo.title }}</figcaption>
         {% endif %}
-        <img class="{{ photo.image_class }} figure-img img-fluid rounded image-wrapper "
-             src="{{ photo.url }}?h={{ photo.height }}&w={{ photo.width }}"
-             height="{{ photo.height }}"
-             width="{{ photo.width }}"
+        <img class="{{ photo.image_class }} figure-img img-fluid rounded image-wrapper"
+             src="{{ photo.url }}" style="max-height: {{ photo.height }}px; max-width:{{ photo.width }}px;
+                height:auto; width:auto"
              alt="{{ photo.alt_text }}"/>
         <figcaption class="figure-caption has-text-black {{ photo.caption_class }}">{{ photo.caption }}</figcaption>
     </figure>
