--- a/ssfl/templates/main/main_slides.jinja2
+++ b/ssfl/templates/main/main_slides.jinja2
@@ -3,7 +3,7 @@
     {% if main_slides.slides %}
         {% with %}
             {% set slideshow = main_slides.slides %}
-            <div style="min-height: 150px; background-color: yellow">{% include 'base/slideshow.jinja2' %}</div>
+            <div class="MAIN_slides" style="min-height: 150px; ">{% include 'base/slideshow.jinja2' %}</div>
         {% endwith %}
     {% endif %}
 </div>
