--- a/ssfl/templates/base/snippet.jinja2
+++ b/ssfl/templates/base/snippet.jinja2
@@ -7,7 +7,7 @@
     This may also be included as a component of a story or other higher level
     element in which case it will provide the surrounding structure.
 -->
-<div class="card" style="">
+<div class="container" style="">
         {% if item.cell_type=='story' %}
             {% set item2 = item.story %}
             <div class="BASE_snippet col">
