--- a/ssfl/static/css/mystyles.css
+++ b/ssfl/static/css/mystyles.css
@@ -17,3 +17,28 @@
 p {
   margin-bottom: 1.5rem;
 }
+
+/* set photo behind navbar */
+.nav-bg-img {
+  max-height: 50px;
+
+  /* Center and scale the image nicely */
+  background-position: left;
+  background-repeat: repeat-x;
+  background-size: cover;
+
+  /* Needed to position the navbar */
+  position: relative;
+}
+
+/* Position the navbar container inside the image */
+.nav-contain {
+  position: absolute;
+  margin: 20px;
+  width: auto;
+}
+.navbar-item {
+  font-size: larger;
+  font-width: bold;
+  color: black;
+}
